--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ When one changes, the other will automatically update to remain synchronized, we
     <script src="js/application.js"></script>
     <script src="js/router.js"></script>
     <script src="js/models/todo.js"></script>
+    <script src="js/controllers/todos_controller.js"></script>
 
 <!-- ... additional lines truncated for brevity ... -->
   </body>
