feature: update the script tag to referance a todo (item) controller

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ When one changes, the other will automatically update to remain synchronized, we
     <script src="js/router.js"></script>
     <script src="js/models/todo.js"></script>
     <script src="js/controllers/todos_controller.js"></script>
+    <script src="js/controllers/todo_controller.js"></script>
 
 <!-- ... additional lines truncated for brevity ... -->
   </body>
