feature: automatically update the number of todos left using computed properties on the todos controller

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ When one changes, the other will automatically update to remain synchronized, we
   <!-- FOOTER -->
         <footer id="footer">
           <span id="todo-count">
-            <strong>2</strong> todos left
+            <strong>{{remaining}}</strong> {{inflection}} left
           </span>
           <ul id="filters">
             <li>
