--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ When one changes, the other will automatically update to remain synchronized, we
               <a href="all" class="selected">All</a>
             </li>
             <li>
-              <a href="active">Active</a>
+              {{#link-to "todos.active" activeClass="selected"}}Active{{/link-to}}
             </li>
             <li>
               <a href="completed">Completed</a>
