--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ When one changes, the other will automatically update to remain synchronized, we
               {{#link-to "todos.active" activeClass="selected"}}Active{{/link-to}}
             </li>
             <li>
-              <a href="completed">Completed</a>
+              {{#link-to "todos.completed" activeClass="selected"}}Completed{{/link-to}}
             </li>
           </ul>
 
