--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ When one changes, the other will automatically update to remain synchronized, we
           </span>
           <ul id="filters">
             <li>
-              <a href="all" class="selected">All</a>
+              {{#link-to "todos.index" activeClass="selected"}}All{{/link-to}}
             </li>
             <li>
               {{#link-to "todos.active" activeClass="selected"}}Active{{/link-to}}
