update the template to use an action to clear completed and do a count on the number of completed

--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@ When one changes, the other will automatically update to remain synchronized, we
             </li>
           </ul>
 
-          <button id="clear-completed">
-            Clear completed (1)
-          </button>
+          {{#if hasCompleted}}
+            <button id="clear-completed" {{action "clearCompleted"}}>
+              Clear completed {{completed}}
+            </button>
+          {{/if}}
+
         </footer>
       </section>
 
