--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ When one changes, the other will automatically update to remain synchronized, we
     <script src="js/libs/handlebars-1.0.0.js"></script>
     <script src="js/libs/ember.js"></script>
     <script src="js/libs/ember-data.js"></script>
+    <script src="js/libs/localstorage_adapter.js"></script>
 
 <!-- include js/application.js and js/router.js after Ember.js and other javascript dependencies -->
     <script src="js/application.js"></script>
