--- a/test.html
+++ b/test.html
@@ -13,7 +13,12 @@
   <script src="js/libs/jquery-1.10.2.min.js"></script>
   <script src="js/libs/handlebars-1.0.0.js"></script>
   <script src="js/libs/ember.js"></script>
+  <script src="js/libs/ember-data.js"></script>
+  <script src="js/libs/localstorage_adapter.js"></script>
   <script src="js/libs/ember_qunit_main.js"></script>
+  <script src="js/application.js"></script>
+  <script src="js/controllers/todo_controller.js"></script>
+
   <script src="js/tests/test.js"></script>
 
 </body>
